Corrected filename refs in scripts

--- a/build-sushruta-cd/grub.cfg
+++ b/build-sushruta-cd/grub.cfg
@@ -35,7 +35,7 @@ terminal_output gfxterm
 insmod part_msdos
 insmod ext2
 insmod png
-if background_image /casper/sushurata-splash.png; then
+if background_image /casper/sushruta-splash.png; then
   set color_normal=light-gray/black
   set color_highlight=magenta/black
 else
@@ -61,27 +61,27 @@ export linux_gfx_mode
 ##############################################################
 # For live cd
 ##############################################################
-menuentry "Hindawi Linux GUI" {
+menuentry "Sushruta MediFLOSS GUI" {
 linux /casper/vmlinuz boot=casper quiet splash
 initrd /casper/initrd.img
 }
 
-menuentry "Hindawi Linux in safe mode" {
+menuentry "Sushruta MediFLOSS in safe mode" {
 linux /casper/vmlinuz boot=casper xforcevesa quiet splash
 initrd /casper/initrd.img
 }
 
-menuentry "Hindawi Linux CLI" {
+menuentry "Sushruta MediFLOSS CLI" {
 linux /casper/vmlinuz boot=casper textonly quiet splash
 initrd /casper/initrd.img
 }
 
-menuentry "Hindawi Linux GUI persistent mode" {
+menuentry "Sushruta MediFLOSS GUI persistent mode" {
 linux /casper/vmlinuz boot=casper persistent quiet splash
 initrd /casper/initrd.img
 }
 
-menuentry "Hindawi Linux GUI from RAM" {
+menuentry "Sushruta MediFLOSS GUI from RAM" {
 linux /casper/vmlinuz boot=casper toram quiet splash
 initrd /casper/initrd.img
 }
